Export packages svm.core and svm.hosted during native build